# jse-intraday-analysis

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
data/raw/: sample_AGL.csv
reports/: summary.md
src/jse_intraday/: __init__.py  data_loader.py  feature_engineering.py  models.py  report.py  seasonality.py
src/jse_intraday_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
