[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jse-intraday-analysis"
version = "0.1.0"
description = "Intraday OHLCV analytics for JSE tickers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "statsmodels>=0.14",
  "scikit-learn>=1.3",
  "pytz>=2024.1"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
